# libuuuid

./: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  README  autogen.sh  configure.ac  uuuid.pc.in
src/: Makefile.am  uuuid-fbsd.c  uuuid-linux.c  uuuid-win32.c  uuuid.h
vs2012/: libuuuid.sln  libuuuid.vcxproj  libuuuid.vcxproj.filters
